Updated the parallel coordinate repo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
 
-
+    <link rel="stylesheet" type="text/css" href="./css/theme.css" />
     <link rel="stylesheet" type="text/css" href="parallel.css" />
     <link rel="stylesheet" type="text/css" href="theme.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -40,12 +40,13 @@
         <!--Parallel Coordinates-->
         <!--</div>-->
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-            <li ><a href="http://www.depts.ttu.edu/hpcc/" class="logoLink"><img src="https://idatavisualizationlab.github.io/HPCC/HiperView/images/TTUlogoWhite.png" alt="TTU"></a></li>
+            <li ><a href="#" class="logoLink"><img src="https://www.dell.com/community/s/html/assets/Dell_Logo_Wht_rgb.png?8DCCE0F2FE3135643573F6D504B5CB5C" alt="DELL" height="45" width="45"></a></li>
             <!--<li class="tab active"><a class="active" href="#">HiperView</a></li>-->
             <!--<li class="tab"><a href="https://idatavisualizationlab.github.io/HPCC/PhaseSpace/index.html">Phase Space</a></li>-->
             <!--<li class="tab"><a href="https://idatavisualizationlab.github.io/HPCC/ParallelCoordinates/index.html">Parallel Coordinates</a></li>-->
             <!--<li class="tab"><a href="https://idatavisualizationlab.github.io/HPCC/PhaseSpace/index.html">Phase Space</a></li>-->
             <!--<div class="col valign-wrapper">-->
+            <li style="padding: 15px;"><a href="https://www.delltechnologies.com/"><img alt="Dell Technologies" src="https://www.dell.com/community/s/html/assets/delltechlogo.png?4B214BA4EE77C4F22AB63D14830CC501"></a></li>
             <li class="summaryText1" style="font-family: 'ITC Charter W01',Georgia,Garamond,serif;">  </li>
             <li class ="currentDate center-align"></li>
             <!--</div>-->
@@ -53,14 +54,6 @@
         <ul class="right">
             <!--<li><a href="https://idatavisualizationlab.github.io/HPCC/HiperView/HPCC_VR/index.html">Virtual Reality</a></li>-->
             <li class="tab active"><a class="active" href="#">Parallel Coordinates</a></li>
-            <li class="nav__menu">OTHER LINKS
-                <ul class="nav__menu-lists nav__menu--2-lists">
-                    <li class="nav__menu-items"><a href="https://idatavisualizationlab.github.io/HPCC/HiperView/demo.html">HiperView</a></li>
-                    <li class="nav__menu-items"><a href="https://idatavisualizationlab.github.io/HPCC/PhaseSpace/index.html">Phase Space</a></li>
-                    <li class="nav__menu-items"><a href="https://idatavisualizationlab.github.io/HPCC/HiperView/HPCC_VR/index.html">Virtual Reality</a></li>
-                    <li class="nav__menu-items"><a href="https://idatavisualizationlab.github.io/HPCC/clusterDemo/index.html">ClusterView</a></li>
-                </ul>
-            </li>
             <li><a href="#!" value="dark" id = "DarkTheme" class="btn waves-effect waves-effect waves-yellow">
                 <i class="material-icons left">brightness_6</i><span>Light</span></a></li>
         </ul>
@@ -68,9 +61,7 @@
 </nav>
 <ul class="sidenav " id="mobile-demo">
     <h5></h5>
-    <li><a href="http://www.depts.ttu.edu/hpcc/"><img src="https://idatavisualizationlab.github.io/HPCC/HPCViz/images/TTUlogo.png" alt="Texas Tech University" class="avatar"></a></li>
-    <li><a href="https://idatavisualizationlab.github.io/HPCC/HiperView/demo.html">HiperView</a></li>
-    <li><a href="https://idatavisualizationlab.github.io/HPCC/HiperView/HPCC_VR/index.html">Virtual Reality</a></li>
+    <li><a href="#"><img src="https://www.dell.com/community/s/html/assets/Dell_Logo_Wht_rgb.png?8DCCE0F2FE3135643573F6D504B5CB5C" alt="DELL" height="45" width="45"></a></li>
     <li><a href="https://idatavisualizationlab.github.io/HPCC/ParallelCoordinates/index.html">Parallel Coordinates</a></li>
 </ul>
 <div id='datainformation'>
