--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <!--</p>-->
                 </div>
             </li>
-            <li>
+            <!-- <li>
                 <div class="collapsible-header"><i class="material-icons">group_work</i> <span> Operational states </span></div>
                 <div class="collapsible-body">
                     <div style="position: relative;">
@@ -160,9 +160,9 @@
                                 <label for="clusterMethod" class="col s4 radarcontroller_layout"> Grouping Method</label>
                                 <select id="clusterMethod" class="col s8 radarcontroller_layout">
                                     <option value="leaderbin" selected="selected">Leader Bin</option>
-                                    <option value="kmean">K-means</option>
+                                    <option value="kmean">K-means</option> -->
                                     <!--<option value="binarybin">Binary bin</option>-->
-                                </select>
+                               <!-- </select>
                             </div>
                             <div  class="row valign-wrapper">
                                 <label for="normMethod" class="col s4 radarcontroller_layout"> Distance Function</label>
@@ -203,12 +203,12 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="row s12 valign-wrapper" style="margin-bottom: 0; padding-top: 10px; background-color: white">
+                        <div class="row s12 valign-wrapper" style="margin-bottom: 0; padding-top: 10px; background-color: white"> -->
                             <!--                                <label class="col s8 offset-s4 left-align">-->
                             <!--                                    <input id="majorGroupDisplay_control" checked type="checkbox" class="filled-in">-->
                             <!--                                    <span >Display min-max</span>-->
                             <!--                                </label>-->
-                            <div class="col s8 offset-s3 left-align">
+                        <!--    <div class="col s8 offset-s3 left-align">
                                 <label for="majorGroupDisplay_control">Display: </label>
                                 <select id="majorGroupDisplay_control">
                                     <option value="0">Leaders</option>
@@ -228,7 +228,7 @@
                         </div>
                     </div>
                 </div>
-            </li>
+            </li> -->
             <li>
                 <div class="collapsible-header"><i class="material-icons">help</i>Controls</div>
                 <div class="collapsible-body">
@@ -279,8 +279,8 @@
                     <option value="tick" selected="selected">ticks</option>
                     <option value="violin">Violin plots</option>
                     <option value="violin+tick">Violin plots + ticks</option>
-                    <option value="stack">Stacked stream</option>
-                    <option value="stack+tick">Stacked stream + ticks</option>
+                    <!-- <option value="stack">Stacked stream</option>
+                    <option value="stack+tick">Stacked stream + ticks</option> -->
                 </select>
             </div>
         </div>
